# SiteWatch

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GUIDE.md  LICENSE  README.fr.md  README.md  RELEASE_NOTES.md  ROADMAP.md  config.example.json  vcpkg.json
cmake/toolchains/: linux-aarch64.cmake
docs/: BUILD_FOR_BEGINNERS.md  CASE_STUDIES.md  DEPANNAGE_LOGS.md  GUIDE.md  INSTALL_LINUX.md  README.md
docs/en/: README.md
docs/fr/: ARCHITECTURE.md  BUILD_FOR_BEGINNERS.md  CASE_STUDIES.md  COMPILATION.md  DEPANNAGE_LOGS.md  GUIDE.md  INSTALL_LINUX.md  README.md  SUPERVISION_ET_MAJ.md
resources/: app.qrc  app.rc  logo_to_ico.ps1
resources/fonts/: README.md
resources/themes/: app.qss  dark.theme  light.theme
scripts/: package-win.ps1  sync-morf.ps1  sync-morf.sh  vscode-mingw.ps1
scripts/linux/: install.sh  package-appimage.sh  package-deb.sh  sitewatch.desktop
scripts/windows/: deploy-mingw.sh  package-win.ps1  vscode-mingw.ps1
src/: main.cpp
src/config/: Config.cpp  Config.h
src/core/analytics/: BotDetector.cpp  BotDetector.h  StatsEngine.cpp  StatsEngine.h
src/core/cache/: CacheManager.cpp  CacheManager.h
src/core/io/: GzReader.cpp  GzReader.h
src/core/model/: LogEntry.h  Stats.h
src/core/net/: LogDiscovery.cpp  LogDiscovery.h  SftpClient.cpp  SftpClient.h
src/core/parser/: ApacheLogParser.cpp  ApacheLogParser.h
src/ui/: CacheCleanupDialog.cpp  CacheCleanupDialog.h  ComparisonDialog.cpp  ComparisonDialog.h  DetailDialog.cpp  DetailDialog.h  Icons.cpp  Icons.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  UrlReport.cpp  UrlReport.h
